2016-04-24  Hunseop Jeong  <hs85.jeong@samsung.com>

        [EFL] Update the ewk_settings_offline_web_application_cache_enabled_get() expected value after r199854.
        https://bugs.webkit.org/show_bug.cgi?id=156968

        Reviewed by Gyuyoung Kim.

        * UIProcess/API/C/WKPreferencesRef.h: Update the comment.
        * UIProcess/API/efl/tests/test_ewk2_settings.cpp: 
        (TEST_F):

2016-04-23  Andy Estes  <aestes@apple.com>

        Fix issues found by the clang static analyzer
        https://bugs.webkit.org/show_bug.cgi?id=156956

        Reviewed by Alexey Proskuryakov.

        * UIProcess/API/Cocoa/WKPreviewActionItem.mm:
        (-[WKPreviewAction dealloc]): Added to release _identifier.
        * UIProcess/_WKWebViewPrintFormatter.mm:
        (-[_WKWebViewPrintFormatter dealloc]): Released _frameToPrint.
        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView inputView]): -createPeripheralWithView: returned a retained object, but the method name did not
        match Cocoa conventions. Called -initWithView: instead.
        (-[WKContentView _showAttachmentSheet]): Stored the _WKActivatedElementInfo in a RetainPtr.
        (-[WKContentView _dataForPreviewItemController:atPosition:type:]): Ditto.
        (+[WKAutocorrectionContext autocorrectionContextWithData:markedText:selectedText:afterText:selectedRangeInMarkedText:]):
        The properties contextBeforeSelection, selectedText, markedText, and contextAfterSelection have the 'copy'
        annotation in UIWKAutocorrectionContext, so the additional copy made here would be leaked. Removed the extra copy.
        (-[WKAutocorrectionContext dealloc]): Deleted.
        * UIProcess/ios/forms/WKFormInputControl.h: Removed -createPeripheralWithView: and declared -initWithView:.
        * UIProcess/ios/forms/WKFormInputControl.mm:
        (-[WKFormInputControl initWithView:]): Changed to return instancetype.
        (+[WKFormInputControl createPeripheralWithView:]): Deleted.